# GreenAgentFinance

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  agent.md  pyproject.toml
.github/workflows/: test-and-publish.yml
scripts/: ralph_gate.py
src/finance_green_agent/: a2a_schemas.py  green_eval.py  server.py  task_store.py
src/finance_green_agent/agent_core/: agent.py  determinism.py  get_agent.py  logger.py  prompt.py  tools_base.py  utils.py
src/finance_green_agent/eval/: public_eval.py  rubric.py
src/finance_green_agent/tools/: cache_manifest.py  citation_validator.py  offline_edgar_search.py  offline_web_search.py  parse_cached_html.py  unit_normalizer.py
tests/: test_a2a_schemas.py  test_http_conformance.py  test_offline_tools.py
